MMA-7724 Prefaktor før innsyns-bibliotek-bonanza